--- a/TaskMaster.Web/Pages/ProjectTask/DeleteTask.cshtml
+++ b/TaskMaster.Web/Pages/ProjectTask/DeleteTask.cshtml
@@ -1,16 +1,20 @@
 ﻿@page "/delete-task"
 @model TaskMaster.Web.Pages.ProjectTask.DeleteTaskModel
 
+
 <div class="row justify-content-center">
-    <div class="col-6 offset-3">
-        <div class="card" style="width: 30rem;">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-title text-center display-6">Confirm Deletion</div>
             <div class="card-body">
-                <h5 class="card-title"><i class="fa-solid fa-circle-exclamation"></i></h5>
-                <p class="card-text">Are you sure that you would like to delete this task?</p>
+                <h5 class="card-text text-center"><i class="fa-solid fa-circle-exclamation"></i> Are you sure?</h5>
+                <p class="text-center">Do you really want to delete these project record? This process cannot be undone.</p>
                 <form method="post">
                     <input type="hidden" asp-for="Id" />
-                    <button type="submit" class="btn btn-success text-black"><i class="fa-solid fa-circle-check text-black"></i> Delete</button>
-                    <a asp-page="/ProjectTask/GetProjectTasks" asp-route-id="@TempData["projectId"]" class="btn btn-warning text-black"><i class="fa-solid fa-backward"></i><Span> Back</Span></a>
+                    <div class="col-12 btn-group mt-3">
+                        <button type="submit" class="btn btn-success text-black"><i class="fa-solid fa-circle-check text-black"></i> Delete</button>
+                        <a asp-page="/ProjectTask/GetProjectTasks" asp-route-id="@TempData["projectId"]" class="btn btn-warning text-black"><i class="fa-solid fa-ban"></i><Span> Cancel</Span></a>
+                    </div>
                 </form>
             </div>
         </div>
