--- a/TaskMaster.Web/Pages/ProjectTask/UpdateTask.cshtml
+++ b/TaskMaster.Web/Pages/ProjectTask/UpdateTask.cshtml
@@ -1,11 +1,10 @@
 ﻿@page "/update-task"
 @model TaskMaster.Web.Pages.ProjectTask.UpdateTaskModel
 
-<div class="row justify-content-center">
-    <div class="display-6 text-center">Update</div>
-</div>
+
 <div class="row justify-content-center">
     <div class="card">
+        <div class="card-title text-center display-6">Update Task</div>
         <div class="card-body">
             <form method="post">
                 <input type="hidden" asp-for="UpdateTask.Id" />
@@ -24,50 +23,48 @@
                 </div>
 
                 <div class="col-12 form-group p-1">
-                    <span> Title</span>
-                    <input asp-for="UpdateTask.Title" type="text" class="form-control">
+                    <span class="text-primary"> Title</span>
+                    <input asp-for="UpdateTask.Title" type="text" class="form-control mt-1">
                 </div>
                 <div class="col-12 form-group p-1">
-                    <span> Description</span>
-                    <textarea class="form-control" asp-for="UpdateTask.Description" rows="3"></textarea>
+                    <span class="text-primary"> Description</span>
+                    <textarea class="form-control mt-1" asp-for="UpdateTask.Description" rows="3"></textarea>
                 </div>
                 <div class="col-12 d-inline-flex">
                     <div class="col-6 form-group p-1">
-                        <span> Status</span>
-                        <select asp-for="UpdateTask.TaskStatus" asp-items="Html.GetEnumSelectList<TaskMaster.Shared.Dtos.TaskDtos.TaskStatusDto>()" class="form-control form-select">
+                        <span class="text-primary"> Status</span>
+                        <select asp-for="UpdateTask.TaskStatus" asp-items="Html.GetEnumSelectList<TaskMaster.Shared.Dtos.TaskDtos.TaskStatusDto>()" class="form-control form-select mt-1">
                             <option value="">Choose..</option>
                         </select>
                     </div>
                     <div class="col-6 form-group p-1">
-                        <span> Priority</span>
-                        <select asp-for="UpdateTask.PriorityLevel" asp-items="Html.GetEnumSelectList<TaskMaster.Shared.Dtos.TaskDtos.PriorityLevelDto>()" class="form-control form-select">
+                        <span class="text-primary"> Priority</span>
+                        <select asp-for="UpdateTask.PriorityLevel" asp-items="Html.GetEnumSelectList<TaskMaster.Shared.Dtos.TaskDtos.PriorityLevelDto>()" class="form-control form-select mt-1">
                             <option value="">Choose..</option>
                         </select>
                     </div>
                 </div>
                 <div class="col-12 d-inline-flex">
                     <div class="col-4 p-1">
-                        <span> Starting</span>
-                        <input type="date" class="form-control" asp-for="UpdateTask.StartingDate">
+                        <span class="text-primary"> Starting</span>
+                        <input type="date" class="form-control mt-1" asp-for="UpdateTask.StartingDate">
                     </div>
                     <div class="col-4 p-1">
-                        <span> Duration</span>
-                        <input type="text" class="form-control" asp-for="UpdateTask.Duration">
+                        <span class="text-primary"> Duration</span>
+                        <input type="text" class="form-control mt-1" asp-for="UpdateTask.Duration">
                     </div>
                     <div class="col-4 p-1">
-                        <span> Finished</span>
-                        <input type="date" class="form-control" asp-for="UpdateTask.FinishedDate">
+                        <span class="text-primary"> Finished</span>
+                        <input type="date" class="form-control mt-1" asp-for="UpdateTask.FinishedDate">
                     </div>
                 </div>
                 <div class="col-12 form-group p-1">
-                    <span> Comment</span>
-                    <textarea class="form-control" asp-for="UpdateTask.Comment" rows="3"></textarea>
+                    <span class="text-primary"> Comment</span>
+                    <textarea class="form-control mt-1" asp-for="UpdateTask.Comment" rows="3"></textarea>
                 </div>
-                <div class="form-group p-1 my-2">
-                    <div class="col-8 form-group">
-                        <button type="submit" class="btn btn-success btn-sm"><i class="fa-solid fa-floppy-disk"></i> Save</button>
-                        <a asp-page="/ProjectTask/GetProjectTasks" asp-route-id="@Model.ProjectId" class="btn btn-warning btn-sm mx-3"><i class="fa-solid fa-backward"></i><span> Back</span></a>
-                    </div>
+                <div class="btn-group col-12 mt-3">
+                    <button type="submit" class="btn btn-success btn-sm text-black"><i class="fa-solid fa-floppy-disk"></i> Save</button>
+                    <a asp-page="/ProjectTask/GetProjectTasks" asp-route-id="@Model.ProjectId" class="btn btn-warning btn-sm mx-3"><i class="fa-solid fa-ban"></i><span> Cancel</span></a>
                 </div>
             </form>
         </div>
