--- a/TaskMaster.Web/Pages/Index.cshtml
+++ b/TaskMaster.Web/Pages/Index.cshtml
@@ -239,7 +239,7 @@
 
                             <div class="col-12 form-group">
                                 <span> Project</span>
-                                <select asp-for="CreateTask.ProjectId" asp-items="@Model.ProjectList" class="form-control form-select">
+                                <select asp-for="CreateIssue.ProjectId" asp-items="@Model.ProjectList" class="form-control form-select">
                                     <option value="">Choose..</option>
                                 </select>
                             </div>
