--- a/TaskMaster.Web/Pages/Project/UpdateProject.cshtml
+++ b/TaskMaster.Web/Pages/Project/UpdateProject.cshtml
@@ -5,7 +5,7 @@
 
 <div class="row justify-content-center">
     <div class="card col">
-        <div class="card-title text-center display-6">Update Project</div>
+        <div class="card-title text-center display-6 mt-2">Update Project</div>
         <hr />
         <div class="card-body">
             <form method="post">
