--- a/TaskMaster.Web/Pages/ProjectTask/GetProjectTasks.cshtml
+++ b/TaskMaster.Web/Pages/ProjectTask/GetProjectTasks.cshtml
@@ -132,8 +132,8 @@
                         <h5 class="card-title">@item.Title</h5>
                         <h6 class="card-subtitle mb-2 text-muted">@item.Description</h6>
                         <hr />
-                        <a asp-page="/ProjectTask/UpdateTask" asp-route-id="@item.Id" class="btn btn-light"><i class="fa-solid fa-pen-to-square text-black"></i></a>
-                        <a asp-page="/ProjectTask/DeleteTask" asp-route-id="@item.Id" class="btn btn-light"><i class="fa-solid fa-trash text-black"></i></a>
+                        <a asp-page="/ProjectTask/UpdateTask" asp-route-id="@item.Id" class="btn btn-warning btn-sm"><i class="fa-solid fa-pen-to-square text-black"></i></a>
+                        <a asp-page="/ProjectTask/DeleteTask" asp-route-id="@item.Id" class="btn btn-danger btn-sm"><i class="fa-solid fa-trash text-black"></i></a>
                         <hr />
                         <form method="post">
                             <input type="hidden" name="taskStatus" value="Progress" />
@@ -172,8 +172,8 @@
                         <h5 class="card-title">@item.Title</h5>
                         <h6 class="card-subtitle mb-2 text-muted">@item.Description</h6>
                         <hr />
-                        <a asp-page="/ProjectTask/UpdateTask" asp-route-id="@item.Id" class="btn btn-light"><i class="fa-solid fa-pen-to-square text-black"></i></a>
-                        <a asp-page="/ProjectTask/DeleteTask" asp-route-id="@item.Id" class="btn btn-light"><i class="fa-solid fa-trash text-black"></i></a>
+                        <a asp-page="/ProjectTask/UpdateTask" asp-route-id="@item.Id" class="btn btn-warning btn-sm"><i class="fa-solid fa-pen-to-square text-black"></i></a>
+                        <a asp-page="/ProjectTask/DeleteTask" asp-route-id="@item.Id" class="btn btn-danger btn-sm"><i class="fa-solid fa-trash text-black"></i></a>
                         <hr />
                         <form method="post">
                             <input type="hidden" name="taskStatus" value="ToDo" />
@@ -220,8 +220,8 @@
                         <h5 class="card-title">@item.Title</h5>
                         <h6 class="card-subtitle mb-2 text-muted">@item.Description</h6>
                         <hr />
-                        <a asp-page="/ProjectTask/UpdateTask" asp-route-id="@item.Id" class="btn btn-light"><i class="fa-solid fa-pen-to-square text-black"></i></a>
-                        <a asp-page="/ProjectTask/DeleteTask" asp-route-id="@item.Id" class="btn btn-light"><i class="fa-solid fa-trash text-black"></i></a>
+                        <a asp-page="/ProjectTask/UpdateTask" asp-route-id="@item.Id" class="btn btn-warning btn-sm"><i class="fa-solid fa-pen-to-square text-black"></i></a>
+                        <a asp-page="/ProjectTask/DeleteTask" asp-route-id="@item.Id" class="btn btn-danger btn-sm"><i class="fa-solid fa-trash text-black"></i></a>
                         <hr />
                         <form method="post">
                             <input type="hidden" name="taskStatus" value="Progress" />
@@ -266,8 +266,8 @@
                         <h5 class="card-title">@item.Title</h5>
                         <h6 class="card-subtitle mb-2 text-muted">@item.Description</h6>
                         <hr />
-                        <a asp-page="/ProjectTask/UpdateTask" asp-route-id="@item.Id" class="btn btn-light"><i class="fa-solid fa-pen-to-square text-black"></i></a>
-                        <a asp-page="/ProjectTask/DeleteTask" asp-route-id="@item.Id" class="btn btn-light"><i class="fa-solid fa-trash text-black"></i></a>
+                        <a asp-page="/ProjectTask/UpdateTask" asp-route-id="@item.Id" class="btn btn-warning btn-sm"><i class="fa-solid fa-pen-to-square text-black"></i></a>
+                        <a asp-page="/ProjectTask/DeleteTask" asp-route-id="@item.Id" class="btn btn-danger btn-sm"><i class="fa-solid fa-trash text-black"></i></a>
                         <hr />
                         <form method="post">
                             <input type="hidden" name="taskStatus" value="Review" />
