--- a/TaskMaster.Web/Pages/ProjectTask/UpdateTask.cshtml
+++ b/TaskMaster.Web/Pages/ProjectTask/UpdateTask.cshtml
@@ -4,7 +4,8 @@
 
 <div class="row justify-content-center">
     <div class="card">
-        <div class="card-title text-center display-6">Update Task</div>
+        <div class="card-title text-center display-6 mt-2">Update Task</div>
+        <hr />
         <div class="card-body">
             <form method="post">
                 <input type="hidden" asp-for="UpdateTask.Id" />
