Index and GetProjectIssues pages updated

--- a/TaskMaster.Web/Pages/Index.cshtml
+++ b/TaskMaster.Web/Pages/Index.cshtml
@@ -293,7 +293,7 @@
                     <div class="d-flex flex-row align-items-center">
                         <div class="icon"><i class="fa-solid fa-cube text-black"></i></div>
                         <div class="ms-2 c-details">
-                            <h6 class="mb-0">Projects</h6>
+                            <h6 class="mb-0">PROJECT</h6>
                         </div>
                         <div class="m-5">
                             <button data-bs-toggle="modal" data-bs-target="#createProjectModal" class="btn btn-light btn-sm text-end mx-2 text-black"><i class="fa-solid fa-square-plus"></i></button>
@@ -314,7 +314,7 @@
                     <div class="d-flex flex-row align-items-center">
                         <div class="icon"> <i class="fa-solid fa-clipboard-check text-black"></i></div>
                         <div class="ms-2 c-details">
-                            <h6 class="mb-0">Tasks</h6>
+                            <h6 class="mb-0">TASK</h6>
                         </div>
                     </div>
                     <div class="m-5">
@@ -335,7 +335,7 @@
                     <div class="d-flex flex-row align-items-center">
                         <div class="icon"> <i class="fa-solid fa-eye text-black"></i></div>
                         <div class="ms-2 c-details">
-                            <h6 class="mb-0">Issues</h6>
+                            <h6 class="mb-0">ISSUE</h6>
                         </div>
                     </div>
                     <div class="m-5">
