--- a/TaskMaster.Web/Pages/Index.cshtml
+++ b/TaskMaster.Web/Pages/Index.cshtml
@@ -79,54 +79,52 @@
                     <div class="col">
                         <form method="post" asp-page-handler="CreateProject">
                             <div class="col-12 form-group">
-                                <span>Title</span>
-                                <input asp-for="CreateProject.Name" type="text" class="form-control">
+                                <span class="text-primary">Title</span>
+                                <input asp-for="CreateProject.Name" type="text" class="form-control mt-1">
                             </div>
 
                             <div class="col-12 form-group">
-                                <span> Repo</span>
-                                <input asp-for="CreateProject.Repo" type="text" class="form-control">
+                                <span class="text-primary"> Repo</span>
+                                <input asp-for="CreateProject.Repo" type="text" class="form-control mt-1">
                             </div>
 
                             <div class="col-12 form-group">
-                                <span> Description</span>
-                                <textarea class="form-control" asp-for="CreateProject.Description" rows="2"></textarea>
+                                <span class="text-primary"> Description</span>
+                                <textarea class="form-control mt-1" asp-for="CreateProject.Description" rows="2"></textarea>
                             </div>
 
                             <div class="col-12 form-group">
-                                <span>Story</span>
-                                <textarea class="form-control" asp-for="CreateProject.Story" rows="3"></textarea>
+                                <span class="text-primary">Story</span>
+                                <textarea class="form-control mt-1" asp-for="CreateProject.Story" rows="3"></textarea>
                             </div>
                             <div class="col-12 form-group">
-                                <span> Status</span>
-                                <select asp-for="CreateProject.ProjectStatus" asp-items="Html.GetEnumSelectList<TaskMaster.Shared.Dtos.ProjectDtos.StatusDto>()" class="form-control form-select">
+                                <span class="text-primary"> Status</span>
+                                <select asp-for="CreateProject.ProjectStatus" asp-items="Html.GetEnumSelectList<TaskMaster.Shared.Dtos.ProjectDtos.StatusDto>()" class="mt-1 form-control form-select">
                                     <option value="">Choose..</option>
                                 </select>
                             </div>
 
                             <div class="col-12 d-inline-flex">
                                 <div class="col-4 form-group">
-                                    <span> Starting</span>
-                                    <input type="date" class="form-control" asp-for="CreateProject.StartingDate">
+                                    <span class="text-primary"> Starting</span>
+                                    <input type="date" class="form-control mt-1" asp-for="CreateProject.StartingDate">
                                 </div>
                                 <div class="col-4 form-group">
-                                    <span> Duration</span>
-                                    <input type="text" class="form-control" asp-for="CreateProject.Duration">
+                                    <span class="text-primary"> Duration</span>
+                                    <input type="text" class="form-control mt-1" asp-for="CreateProject.Duration">
                                 </div>
                                 <div class="col-4 form-group">
-                                    <span> Finished</span>
-                                    <input type="date" class="form-control" asp-for="CreateProject.FinishedDate">
+                                    <span class="text-primary"> Finished</span>
+                                    <input type="date" class="form-control mt-1" asp-for="CreateProject.FinishedDate">
                                 </div>
                             </div>
                             <div class="col-12 form-group">
-                                <span> Comment</span>
-                                <textarea class="form-control" asp-for="CreateProject.Comment" rows="3"></textarea>
+                                <span class="text-primary"> Comment</span>
+                                <textarea class="form-control mt-1" asp-for="CreateProject.Comment" rows="3"></textarea>
                             </div>
-                            <div class="col-12 form-group my-3">
-
-                                <button type="button" class="btn btn-warning" data-bs-dismiss="modal">Close</button>
-                                <button type="submit" class="btn btn-primary"><i class="fa-solid fa-floppy-disk"></i> Save</button>
-
+                            <div class="col-12 form-group btn-group my-3">
+                                <button type="submit" class="btn btn-primary btn-sm"><i class="fa-solid fa-floppy-disk"></i> Save</button>
+                                <button type="button" class="btn btn-warning btn-sm" data-bs-dismiss="modal">Close</button>
                             </div>
                         </form>
                     </div>
@@ -155,30 +153,30 @@
                     <div class="col">
                         <form method="post" asp-page-handler="CreateTask">
                             <div class="col-12 form-group">
-                                <span> Project</span>
-                                <select asp-for="CreateTask.ProjectId" asp-items="@Model.ProjectList" class="form-control form-select">
+                                <span class="text-primary"> Project</span>
+                                <select asp-for="CreateTask.ProjectId" asp-items="@Model.ProjectList" class="form-control form-select mt-1">
                                     <option value="">Choose..</option>
                                 </select>
                             </div>
                             <div class="col-12 form-group">
-                                <span> Title</span>
-                                <input asp-for="CreateTask.Title" type="text" class="form-control">
+                                <span class="text-primary"> Title</span>
+                                <input asp-for="CreateTask.Title" type="text" class="form-control mt-1">
                             </div>
 
                             <div class="col-12 form-group">
-                                <span> Description</span>
-                                <textarea class="form-control" asp-for="CreateTask.Description" rows="2"></textarea>
+                                <span class="text-primary"> Description</span>
+                                <textarea class="form-control mt-1" asp-for="CreateTask.Description" rows="2"></textarea>
                             </div>
                             <div class="col-12 d-inline-flex">
                                 <div class="col-6 form-group">
-                                    <span> Status</span>
-                                    <select asp-for="CreateTask.TaskStatus" asp-items="Html.GetEnumSelectList<TaskMaster.Shared.Dtos.TaskDtos.TaskStatusDto>()" class="form-control form-select">
+                                    <span class="text-primary"> Status</span>
+                                    <select asp-for="CreateTask.TaskStatus" asp-items="Html.GetEnumSelectList<TaskMaster.Shared.Dtos.TaskDtos.TaskStatusDto>()" class="form-control form-select mt-1">
                                         <option value="">Choose..</option>
                                     </select>
                                 </div>
                                 <div class="col-6 form-group">
-                                    <span> Priority</span>
-                                    <select asp-for="CreateTask.PriorityLevel" asp-items="Html.GetEnumSelectList<TaskMaster.Shared.Dtos.TaskDtos.PriorityLevelDto>()" class="form-control form-select">
+                                    <span class="text-primary"> Priority</span>
+                                    <select asp-for="CreateTask.PriorityLevel" asp-items="Html.GetEnumSelectList<TaskMaster.Shared.Dtos.TaskDtos.PriorityLevelDto>()" class="form-control form-select mt-1">
                                         <option value="">Choose..</option>
                                     </select>
                                 </div>
@@ -186,29 +184,25 @@
 
                             <div class="col-12 d-inline-flex">
                                 <div class="col-4 form-group">
-                                    <span> Starting</span>
-                                    <input type="date" class="form-control" asp-for="CreateTask.StartingDate">
+                                    <span class="text-primary"> Starting</span>
+                                    <input type="date" class="form-control mt-1" asp-for="CreateTask.StartingDate">
                                 </div>
                                 <div class="col-4 form-group">
-                                    <span> Duration</span>
-                                    <input type="text" class="form-control" asp-for="CreateTask.Duration">
+                                    <span class="text-primary"> Duration</span>
+                                    <input type="text" class="form-control mt-1" asp-for="CreateTask.Duration">
                                 </div>
                                 <div class="col-4 form-group">
-                                    <span> Finished</span>
-                                    <input type="date" class="form-control" asp-for="CreateTask.FinishedDate">
+                                    <span class="text-primary"> Finished</span>
+                                    <input type="date" class="form-control mt-1" asp-for="CreateTask.FinishedDate">
                                 </div>
                             </div>
                             <div class="col-12 form-group">
-
-                                <span> Comment</span>
-                                <textarea class="form-control" asp-for="CreateTask.Comment" rows="3"></textarea>
-
+                                <span class="text-primary"> Comment</span>
+                                <textarea class="form-control mt-1" asp-for="CreateTask.Comment" rows="3"></textarea>
                             </div>
-                            <div class="col-12 form-group my-3">
-
-                                <button type="button" class="btn btn-warning" data-bs-dismiss="modal">Close</button>
-                                <button type="submit" class="btn btn-primary"><i class="fa-solid fa-floppy-disk"></i> Save</button>
-
+                            <div class="col-12 form-group btn-group my-3">
+                                <button type="submit" class="btn btn-primary btn-sm"><i class="fa-solid fa-floppy-disk"></i> Save</button>
+                                <button type="button" class="btn btn-warning btn-sm" data-bs-dismiss="modal">Close</button>
                             </div>
                         </form>
                     </div>
@@ -236,40 +230,39 @@
                 <div class="row">
                     <div class="col">
                         <form method="post" asp-page-handler="CreateIssue">
-
                             <div class="col-12 form-group">
-                                <span> Project</span>
-                                <select asp-for="CreateIssue.ProjectId" asp-items="@Model.ProjectList" class="form-control form-select">
+                                <span class="text-primary"> Project</span>
+                                <select asp-for="CreateIssue.ProjectId" asp-items="@Model.ProjectList" class="form-control form-select mt-1">
                                     <option value="">Choose..</option>
                                 </select>
                             </div>
 
                             <div class="col-12 form-group">
-                                <span> Summary</span>
-                                <input asp-for="CreateIssue.Summary" type="text" class="form-control">
+                                <span class="text-primary"> Summary</span>
+                                <input asp-for="CreateIssue.Summary" type="text" class="form-control mt-1">
                             </div>
 
                             <div class="col-12 d-inline-flex">
                                 <div class="col-6 form-group">
-                                    <span> Status</span>
-                                    <select asp-for="CreateIssue.PriorityLevel" asp-items="Html.GetEnumSelectList<TaskMaster.Shared.Dtos.TaskDtos.PriorityLevelDto>()" class="form-control form-select">
+                                    <span class="text-primary"> Status</span>
+                                    <select asp-for="CreateIssue.PriorityLevel" asp-items="Html.GetEnumSelectList<TaskMaster.Shared.Dtos.TaskDtos.PriorityLevelDto>()" class="form-control form-select mt-1">
                                         <option value="">Choose..</option>
                                     </select>
                                 </div>
                                 <div class="col-6 form-group">
-                                    <span> Starting</span>
-                                    <input type="date" class="form-control" asp-for="CreateIssue.StartingDate">
+                                    <span class="text-primary"> Starting</span>
+                                    <input type="date" class="form-control mt-1" asp-for="CreateIssue.StartingDate">
                                 </div>
                             </div>
 
 
                             <div class="col-12 form-group">
-                                <span> Comment</span>
-                                <textarea class="form-control" asp-for="CreateIssue.Comment" rows="3"></textarea>
+                                <span class="text-primary"> Comment</span>
+                                <textarea class="form-control mt-1" asp-for="CreateIssue.Comment" rows="3"></textarea>
                             </div>
-                            <div class="col-12 form-group my-3">
-                                <button type="button" class="btn btn-warning" data-bs-dismiss="modal">Close</button>
-                                <button type="submit" class="btn btn-primary"><i class="fa-solid fa-floppy-disk"></i> Save</button>
+                            <div class="col-12 form-group btn-group my-3">
+                                <button type="submit" class="btn btn-primary btn-sm"><i class="fa-solid fa-floppy-disk"></i> Save</button>
+                                <button type="button" class="btn btn-warning btn-sm" data-bs-dismiss="modal">Close</button>
                             </div>
                         </form>
                     </div>
