--- a/TaskMaster.Web/Pages/Shared/_Layout.cshtml
+++ b/TaskMaster.Web/Pages/Shared/_Layout.cshtml
@@ -18,12 +18,12 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link" target="_blank" href="https://github.com/oznakdn"><i class="fa-brands fa-github"></i></a></li>
-                    <li class="nav-item dropdown">
+                    @*<li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Menu</a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item text-primary" asp-page="/Project/GetProjects"><i class="fa-brands fa-uncharted"></i> Project</a></li>
                         </ul>
-                    </li>
+                    </li>*@
                 </ul>
             </div>
         </div>
